--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(‪C:\Users\naoto\OneDrive\デスクトップ\shianami.jpg);
+  background-image: url(‪shianami.jpg);
   background-size: cover;
   color: white;
   text-align: center;
